--- a/Cryptography/Odin.Cryptography.csproj
+++ b/Cryptography/Odin.Cryptography.csproj
@@ -5,7 +5,10 @@
     <ImplicitUsings>true</ImplicitUsings>
     <PackageIcon>icon.png</PackageIcon>
     <Description>Originally intended as a wrapper for ordinary use cases around .NET DataProtection APIs.
-    Provides a simple ICryptographer concept supporting Encrypt and Decrypt.</Description>
+    Provides a simple ICryptographer concept supporting Encrypt and Decrypt.
+
+
+    </Description>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.DataProtection" Version="10.0.0" />
