Saving work thus far

--- a/Cryptography/Odin.Cryptography.csproj
+++ b/Cryptography/Odin.Cryptography.csproj
@@ -4,7 +4,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>true</ImplicitUsings>
     <PackageIcon>icon.png</PackageIcon>
-    <Description>Originally intended as a wrapper for ordinary use cases around .NET DataProtection APIs.
+    <Description>Incubator Project: Originally intended as a wrapper for ordinary use cases around .NET DataProtection APIs.
     Provides a simple ICryptographer concept supporting Encrypt and Decrypt.
 
 
