--- a/Notifications/Odin.Notifications.csproj
+++ b/Notifications/Odin.Notifications.csproj
@@ -4,12 +4,10 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>true</ImplicitUsings>
     <PackageIcon>icon.png</PackageIcon>
-    <Description>Exploring creating support for sending notifications on easily configurable "channels",
+    <Description>Incubator Project: Exploring creating support for sending notifications on easily configurable "channels",
       each of which could notify using any number of messaging option, for example: 
       email, SMS, Whatsapp, pager, etc.
 
-      
-      
     </Description>
   </PropertyGroup>
   <ItemGroup>
