--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -50,6 +50,7 @@ jobs:
         run: |
           dotnet pack ./Cryptography/Odin.Cryptography.csproj --configuration $CONFIGURATION --output $PACKAGE_DIR
           dotnet pack ./Notifications/Odin.Notifications.csproj --configuration $CONFIGURATION --output $PACKAGE_DIR
+          dotnet pack ./DomainDesign/Odin.DomainDesign.Primitives.csproj --configuration $CONFIGURATION --output $PACKAGE_DIR
         env:
           CONFIGURATION: ${{env.BUILD_CONFIGURATION}}
           PACKAGE_DIR: ${{env.PACKAGE_DIR}}
