--- a/Notifications/Odin.Notifications.csproj
+++ b/Notifications/Odin.Notifications.csproj
@@ -16,6 +16,6 @@
     <PackageReference Include="Odin.Email" Version="0.9.11" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="icon.png" Pack="true" PackagePath="" />
+    <None Include="../Assets/icon.png" Pack="true" PackagePath="" />
   </ItemGroup>
 </Project>
