--- a/Utility/RecordEnum/Odin.Utility.RecordEnum.csproj
+++ b/Utility/RecordEnum/Odin.Utility.RecordEnum.csproj
@@ -11,6 +11,6 @@
       <PackageReference Include="Odin.System.Result" Version="0.9.11" />
     </ItemGroup>
     <ItemGroup>
-        <None Include="icon.png" Pack="true" PackagePath="" />
+        <None Include="../../Assets/icon.png" Pack="true" PackagePath="" />
     </ItemGroup>
 </Project>
